feat: restore config screen on fabric, add screen to neoforge